feat: align search API response format
